# Project-Backrooms

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
assets/: magic_trip.fs
docs/: Project Backrooms.docx  phase1_design.md  phase2_design.md  roadmap.md
src/: application.cpp  application.hpp  item_renderer.cpp  item_renderer.hpp  item_spawner.cpp  item_spawner.hpp  main.cpp  maze.cpp  maze.hpp  maze_renderer.cpp  maze_renderer.hpp  player.cpp  player.hpp  player_renderer.cpp  player_renderer.hpp
src/core/: application.cpp  application.hpp  main.cpp  ui_manager.cpp  ui_manager.hpp
src/entities/: player.cpp  player.hpp  player_renderer.cpp  player_renderer.hpp
src/generators/: bsp_generator.cpp  bsp_generator.hpp  generator_utils.cpp  generator_utils.hpp  loop_generator.cpp  loop_generator.hpp  prims_generator.cpp  prims_generator.hpp  tunnel_borer.cpp  tunnel_borer.hpp
src/items/: crafting_system.cpp  crafting_system.hpp  item.hpp  item_database.cpp  item_database.hpp  item_renderer.cpp  item_renderer.hpp
src/states/: game_state.hpp  playing_state.cpp  playing_state.hpp
src/world/: item_renderer.cpp  item_spawner.cpp  item_spawner.hpp  maze.cpp  maze.hpp  maze_renderer.cpp  maze_renderer.hpp
src/world/generators/: bsp_generator.cpp  generator_utils.cpp  loop_generator.cpp  prims_generator.cpp  tunnel_borer.cpp  tunnel_borer.hpp
tests/: test_maze.cpp
