cmake_minimum_required(VERSION 3.14)
project(ProjectBackrooms CXX)

# Fix for CMake 3.30+ crashing on raylib 5.0's older cmake_minimum_required(2.8)
set(CMAKE_POLICY_VERSION_MINIMUM 3.5 CACHE INTERNAL "")

if(POLICY CMP0135)
    cmake_policy(SET CMP0135 NEW)
endif()
if(POLICY CMP0169)
    cmake_policy(SET CMP0169 OLD)
endif()

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(FetchContent)

# 1. Fetch Raylib
set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
FetchContent_Declare(
    raylib
    URL https://github.com/raysan5/raylib/archive/refs/tags/5.0.tar.gz
)
FetchContent_MakeAvailable(raylib)

# 2. Fetch ImGui (ImGui does not have a CMakeLists.txt, so we populate it manually)
FetchContent_Declare(
    imgui
    URL https://github.com/ocornut/imgui/archive/refs/heads/docking.zip
)
FetchContent_GetProperties(imgui)
if(NOT imgui_POPULATED)
    FetchContent_Populate(imgui)
endif()

# 3. Fetch rlImGui (Bridge between Raylib and ImGui)
FetchContent_Declare(
    rlimhui
    GIT_REPOSITORY https://github.com/raylib-extras/rlImGui.git
    GIT_TAG main
)
FetchContent_GetProperties(rlimhui)
if(NOT rlimhui_POPULATED)
    FetchContent_Populate(rlimhui)
endif()

# Copy assets to the build directory so the executable can find them
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/assets DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

# 4. Define our executable and include the external source files directly
add_executable(Backrooms 
    src/core/main.cpp 
    src/core/application.cpp
    src/world/maze.cpp
    src/world/maze_renderer.cpp
    src/world/generators/bsp_generator.cpp
    src/world/generators/loop_generator.cpp
    src/world/generators/prims_generator.cpp
    src/world/generators/tunnel_borer.cpp
    src/world/generators/generator_utils.cpp
    src/entities/player.cpp
    src/entities/player_renderer.cpp
    src/world/item_spawner.cpp
    src/items/item_renderer.cpp
    src/states/playing_state.cpp
    src/core/ui_manager.cpp
    src/items/item_database.cpp
    src/items/crafting_system.cpp
    ${imgui_SOURCE_DIR}/imgui.cpp
    ${imgui_SOURCE_DIR}/imgui_demo.cpp
    ${imgui_SOURCE_DIR}/imgui_draw.cpp
    ${imgui_SOURCE_DIR}/imgui_tables.cpp
    ${imgui_SOURCE_DIR}/imgui_widgets.cpp
    ${rlimhui_SOURCE_DIR}/rlImGui.cpp
)

# Tell the compiler where to find the header files (.h files)
target_include_directories(Backrooms PRIVATE
    src
    ${imgui_SOURCE_DIR}
    ${rlimhui_SOURCE_DIR}
)

# Link Raylib to our executable
target_link_libraries(Backrooms PRIVATE raylib)

# Raylib recently renamed IsTextureReady to IsTextureValid. rlImGui expects the new name.
# This define maps it back to the old name so it compiles with Raylib 5.0.
target_compile_definitions(Backrooms PRIVATE IsTextureValid=IsTextureReady)

# ==============================================================================
# 5. TESTING SUITE (Google Test)
# ==============================================================================
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)
# For Windows: Prevent GTest from overriding the parent project's MSVC runtime
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

# Enable testing globally so VS Code's "Testing" sidebar works
enable_testing()

# Create a brand new, completely separate executable just for running tests.
# Notice we do NOT include main.cpp here, because gtest_main provides its own main()!
add_executable(BackroomsTests
    tests/test_maze.cpp
    src/world/maze.cpp
    src/world/maze_renderer.cpp
    src/world/generators/bsp_generator.cpp
    src/world/generators/loop_generator.cpp
    src/world/generators/prims_generator.cpp
    src/world/generators/tunnel_borer.cpp
    src/world/generators/generator_utils.cpp
    src/entities/player.cpp
    src/entities/player_renderer.cpp
    src/world/item_spawner.cpp
    src/items/item_renderer.cpp
    src/states/playing_state.cpp
    src/core/ui_manager.cpp
    src/items/item_database.cpp
    src/items/crafting_system.cpp
    ${imgui_SOURCE_DIR}/imgui.cpp
    ${imgui_SOURCE_DIR}/imgui_demo.cpp
    ${imgui_SOURCE_DIR}/imgui_draw.cpp
    ${imgui_SOURCE_DIR}/imgui_tables.cpp
    ${imgui_SOURCE_DIR}/imgui_widgets.cpp
    ${rlimhui_SOURCE_DIR}/rlImGui.cpp
)

# Tell the test executable where to find our source header files
target_include_directories(BackroomsTests PRIVATE 
    src
    ${imgui_SOURCE_DIR}
    ${rlimhui_SOURCE_DIR}
)

# Link Google Test and Raylib to the test executable
target_link_libraries(BackroomsTests PRIVATE
    gtest_main
    raylib
)

# Raylib recently renamed IsTextureReady to IsTextureValid. rlImGui expects the new name.
target_compile_definitions(BackroomsTests PRIVATE IsTextureValid=IsTextureReady)

# Register the executable with CTest so VS Code can magically discover it
include(GoogleTest)
gtest_discover_tests(BackroomsTests)
